apps/torrents/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  strategy:
    type: RollingUpdate
  template:
    spec:
      serviceAccountName: radarr
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.3.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          resources:
            limits:
              memory: 1024Mi
            requests:
              cpu: 50m
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - SETGID
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads/torrents
              subPath: torrents
            - name: downloads
              mountPath: /downloads/movies
              subPath: movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
