apps/torrents/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
