apps/torrents/radarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  parentRefs:
    - name: eg
      sectionName: https
      namespace: gateway
  hostnames:
    - radarr.homie.e10n.me
  rules:
    - backendRefs:
        - name: radarr
          namespace: torrents
          port: 80
